@@ -1,11 +1,0 @@
-# $NetBSD: Makefile,v 1.3 2020/03/08 16:51:18 wiz Exp $
-
-GST_PLUGINS1_NAME=	gio
-GST_PLUGINS1_DIRS=	gst/gio
-GST_PLUGINS1_FLAGS=	gio experimental
-
-PKGREVISION= 1
-.include "../../multimedia/gst-plugins1-base/Makefile.common"
-
-.include "../../devel/glib2/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
