@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2012/11/29 08:31:31 ryoon Exp $
-lib/gstreamer-1.0/libgstgio.la
